--- a/public/admin.html
+++ b/public/admin.html
@@ -69,6 +69,17 @@
             color: rgba(255, 255, 255, 0.5);
         }
 
+        /* Fix browser autofill styling */
+        input:-webkit-autofill,
+        input:-webkit-autofill:hover,
+        input:-webkit-autofill:focus,
+        input:-webkit-autofill:active {
+            -webkit-box-shadow: 0 0 0 30px rgba(30, 30, 50, 1) inset !important;
+            -webkit-text-fill-color: #fff !important;
+            border: 1px solid rgba(255, 255, 255, 0.2) !important;
+            transition: background-color 5000s ease-in-out 0s;
+        }
+
         button {
             width: 100%;
             padding: 14px;
