--- a/public/admin.html
+++ b/public/admin.html
@@ -316,23 +316,23 @@
             </div>
 
             <div class="form-group">
-                <label for="aqiValue">AQI Value (0-500)</label>
-                <input type="number" id="aqiValue" min="0" max="500" placeholder="Leave empty to use real data">
+                <label for="aqiValue">AQI Value</label>
+                <input type="text" id="aqiValue" placeholder="Leave empty to use real data">
             </div>
 
             <div class="form-group">
-                <label for="tempValue">Temperature (°C)</label>
-                <input type="number" id="tempValue" min="-50" max="60" placeholder="Leave empty to use real data">
+                <label for="tempValue">Temperature</label>
+                <input type="text" id="tempValue" placeholder="Leave empty to use real data">
             </div>
 
             <div class="form-group">
-                <label for="humidityValue">Humidity (%)</label>
-                <input type="number" id="humidityValue" min="0" max="100" placeholder="Leave empty to use real data">
+                <label for="humidityValue">Humidity</label>
+                <input type="text" id="humidityValue" placeholder="Leave empty to use real data">
             </div>
 
             <div class="form-group">
-                <label for="windValue">Wind Speed (m/s)</label>
-                <input type="number" id="windValue" min="0" max="100" step="0.1" placeholder="Leave empty to use real data">
+                <label for="windValue">Wind Speed</label>
+                <input type="text" id="windValue" placeholder="Leave empty to use real data">
             </div>
 
             <button class="btn-success" onclick="saveSettings()">Save Settings</button>
@@ -457,10 +457,11 @@
             const humidity = document.getElementById('humidityValue').value;
             const wind = document.getElementById('windValue').value;
 
-            if (aqi !== '') settings.aqi = parseInt(aqi);
-            if (temp !== '') settings.temperature = parseFloat(temp);
-            if (humidity !== '') settings.humidity = parseInt(humidity);
-            if (wind !== '') settings.windSpeed = parseFloat(wind);
+            // Store as strings to allow any text value
+            if (aqi !== '') settings.aqi = aqi;
+            if (temp !== '') settings.temperature = temp;
+            if (humidity !== '') settings.humidity = humidity;
+            if (wind !== '') settings.windSpeed = wind;
 
             try {
                 const response = await fetch('/api/admin/settings', {
